ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterProperties1/input.ts.stderr
error[1187]: A parameter property may not be declared using a binding pattern.
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterProperties1/input.ts:2:24
  |
2 |     constructor(public [x, y, z]: string[]) {
  |                        ^^^^^^^^^^^^^^^^^^^

